// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should render the component correctly with its custom image 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://hello.jpg"
/>
`;

exports[`ProductImage should show the component with its product image 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
